--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>my KB experience</title>
+        <link rel="stylesheet" href="nice.css">
     </head>
     <body>
+        <h1>So, welcome to my kb experience</h1>
+        <h3>K lets start with my first board redragon k552. I'm fps man and heres my split kb expierence</h3>
         
     </body>
 </html>
