--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <body>
         <h1>So, welcome to my kb experience</h1>
         <h3>K lets start with my first board redragon k552. I'm fps man and heres my split kb expierence</h3>
-        
+        <p>hey, so this is the part where I apply my knowledge</p>
+        <p><strong>Note: do not buy smd diodes if its your first time saudering, its very hard</strong> but anyways here it starts, first, is your keyboard uncomfortable</p>
+        <div> 
+            <button> yes I like ergonomics</button>
+            <button>No, I don't need ergonmics</button>
+        </div>
     </body>
 </html>
