added new images and css

--- a/index.html
+++ b/index.html
@@ -13,5 +13,13 @@
             <button> yes I like ergonomics</button>
             <button>No, I don't need ergonmics</button>
         </div>
+        <div>
+            <p>question number 2 split keyboard or alice</p>
+            <img src="images/real corne.jpg"><img src="images/alice.webp">
+        </div>
+        <div>
+            <button> split, I like cheaper/a bit more ergonmic keyboards</button>
+            <button>I love the extreme drip of an alice keyboard</button>
+        </div>
     </body>
 </html>
